--- a/media.css
+++ b/media.css
@@ -8,7 +8,7 @@
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
     .settings-input-title {
         font-size: 12px;
     }
@@ -43,9 +43,7 @@
         height: auto;
         border-radius: 5px;
     }
-}
 
-@media (max-width: 800px) {
     #title {
         font-size: 20px;
     }
@@ -68,8 +66,6 @@
     .recents-container {
         grid-column: 1/2;
         grid-row: 1/2;
-        max-height: 320px;
-        align-self: stretch;
     }
 
     .type-form-container {
@@ -80,8 +76,6 @@
     .saved-container {
         grid-column: 2/3;
         grid-row: span 2;
-        height: 100% !important;
-        max-height: 700px;
     }
 
     .quick-phrases-container {
